--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -17,7 +17,7 @@ a,
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: hsla(0, 0%, 0%, 0.2);
   }
 }
 
@@ -25,6 +25,7 @@ a,
   body {
     display: flex;
     place-items: center;
+    background-color: black;
   }
 
   #app {
